--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Responsive Webpage</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -16,6 +17,12 @@
             <li><a href="#">Gallery</a></li>
             <li><a href="#">Contact</a></li>
         </ul>
+
+            <i 
+            class="hamburger fas fa-bars"
+            onclick="toggleDropDown()"
+            ></i>
+       
     </div>
 
     <!-- Hero section -->
@@ -85,7 +92,7 @@
         </div>
     </div>
 
-    <!-- Footer section -->
+    <!-- Footer section --> 
     <div class="footer">
         <div class="footer-content">
             <h4>Send a message</h4>
@@ -104,4 +111,7 @@
         <h6>Copyright &copy; 2021 Zuri Training.</h6>
     </div>
 </body>
+
+<script src='./main.js'>    
+</script>
 </html>
